<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">blueBell</string>

    <string name="activity_discover_label">blueBell</string>
    <string name="activity_camera_label">blueBell - Camera control</string>

    <string name="button_take_picture">Shoot</string>
    <string name="button_rec_start">Rec</string>
    <string name="button_rec_stop">Stop</string>
    <string name="button_start_search">Rescan</string>
    <string name="button_cancel_search">Cancel</string>

    <string name="msg_wifi_disconnect">Wi-Fi disconnected</string>
    <string name="msg_search_devices">If you don\'t see your camera listed below, please Set up
        so it can be remotely controlled by means of WiFi, then make sure that this device is
        connected to the same WiFi network of your camera. Click on the WiFi label below to open
        the WiFi settings panel.</string>
    <string name="msg_device_search_started">Searching for devices...</string>
    <string name="msg_device_search_finish">Device search completed.</string>
    <string name="msg_rec_start">Recording started.</string>
    <string name="msg_rec_stop">Recording stopped.</string>
    <string name="msg_error_device_searching">Failed to search.\nStopped.</string>
    <string name="msg_error_api_calling">Cannot control the device by API.</string>
    <string name="msg_error_liveview">Failed to start Liveview.</string>
    <string name="msg_error_take_picture">Failed to take a picture.</string>
    <string name="msg_error_connection">Failed to connect to the device.</string>
    <string name="msg_error_non_supported_device">Unsupported device.</string>
    <string name="no_image">No image</string>

</resources>
