<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:layout_marginTop="10dp"
        android:text="@string/msg_search_devices" />

    <TextView
        android:id="@+id/tv_wifi_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:layout_marginTop="10dp"
        android:text="@string/msg_wifi_disconnect" />

    <ListView
        android:id="@+id/lv_camera_devices"
        android:layout_width="match_parent"
        android:layout_height="264dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp" >
    </ListView>

    <Button
        android:id="@+id/bt_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:text="@string/button_start_search"
        android:onClick="onSearchButtonClicked" />

</LinearLayout>