<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <it.tidalwave.bluebell.cameraview.impl.android.LiveViewSurfaceView
        android:id="@+id/sv_live_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:background="#66FFFFFF"
        android:orientation="vertical"
        android:paddingRight="10dp" >

        <RadioGroup
            android:id="@+id/rg_shoot_mode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp" />

        <Button
            android:id="@+id/bt_take_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:enabled="false"
            android:text="@string/button_take_picture"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:onClick="onTakePhotoClickedClick" />

        <Button
            android:id="@+id/bt_rec_start_stop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:enabled="false"
            android:text="@string/button_rec_start"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:onClick="onRecStartStopClicked" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_camera_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|left"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:textColor="#00FFFFFF"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <ImageView
        android:id="@+id/iv_photo_box"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_gravity="bottom|right"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/picture_wipe_boarder"
        android:contentDescription="@string/no_image"
        android:src="@android:drawable/ic_menu_report_image"
        android:visibility="invisible"
        android:onClick="onPhotoViewClicked" />

</merge>